--- a/docs/core/compatibility/toc.yml
+++ b/docs/core/compatibility/toc.yml
@@ -1,6 +1,6 @@
 - name: Cosa sono le modifiche che causano un'interruzione?
   href: index.md
-- name: Categorie di modifiche che causano un'interruzione
+- name: Compatibilità
   href: categories.md
 - name: Selettori di pagina
   href: breaking-changes.md
@@ -25,7 +25,7 @@
           href: ../porting/net-framework-tech-unavailable.md?toc=/dotnet/core/compatibility/toc.json&bc=/dotnet/breadcrumb/toc.json
         - name: API che generano sempre eccezioni
           href: unsupported-apis.md
-- name: Per area
+- name: Per area tecnologica
   expanded: true
   items:
     - name: ASP.NET Core
