--- a/docs/csharp/tutorials/exploration/interpolated-strings.yml
+++ b/docs/csharp/tutorials/exploration/interpolated-strings.yml
@@ -9,12 +9,12 @@ metadata:
   level: Beginner
   displayType: two-column
   interactive: csharp
-  ms.openlocfilehash: 7736a2a26b37d8fbfac98328f94ce3c9a25be181
-  ms.sourcegitcommit: d9c7ac5d06735a01c1fafe34efe9486734841a72
+  ms.openlocfilehash: a82fe645524e526d0373a4e4733c2fef9ca7c14f
+  ms.sourcegitcommit: cb27c01a8b0b4630148374638aff4e2221f90b22
   ms.translationtype: MT
   ms.contentlocale: it-IT
-  ms.lasthandoff: 05/06/2020
-  ms.locfileid: "82861001"
+  ms.lasthandoff: 07/09/2020
+  ms.locfileid: "86174114"
 items:
 - durationInMinutes: 2
   content: >
@@ -53,7 +53,7 @@ items:
     Nel passaggio precedente è stata usata l'interpolazione di stringhe per inserire una stringa in un'altra. Un'espressione di interpolazione che fa parte di un'espressione di stringa interpolata può avere tuttavia qualsiasi tipo di dati. Includere valori di varie espressioni di tipi di dati in una stringa interpolata.
 
 
-    Nell'esempio seguente viene innanzitutto definita una [tupla](../../tuples.md) con `Name`membri, `Price`e. `perPackage` Eseguire il codice seguente nella finestra interattiva:
+    Nell'esempio seguente viene innanzitutto definita una [tupla](../../language-reference/builtin-types/value-tuples.md) con `Name` `Price` membri, e `perPackage` . Eseguire il codice seguente nella finestra interattiva:
 
 
     ```csharp
